FEAT: new design

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,9 +10,12 @@ $cfDev_secundaryColor: #0c6754;
 $cfDev_tertiaryColor: #12232b;
 $cfDev_cuaternaryColor: #0f443f;
 
+
 //fonts
 
 $cfDev_primaryFont: "Poppins", sans-serif;
 $cfDev_textPrimaryColor: #089f65;
 $cfDev_textSecundaryColor: #696969;
 $cfDev_textTerciaryColor: #dbeaea;
+
+$color_pink:#C36DBC;
