--- a/src/styles/components/_servicesCard.scss
+++ b/src/styles/components/_servicesCard.scss
@@ -9,7 +9,7 @@
    
 
     h2{
-        color: $cfDev_primaryColor;
+        color: $cfDev_textPrimaryColor;
         font-size: 2.2rem;
         font-weight: 600;
 
@@ -43,15 +43,14 @@
     position: absolute;
     backface-visibility: hidden;
     
-    background: rgb(9,13,14);
-    background: linear-gradient(315deg, rgba(9,13,14,1) 35%, rgba(28,37,40,1) 77%);
+    background-color:#ffff;
+    box-shadow: 4px 8px 16px lightgray;
     border-radius: 15px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: red;
     row-gap: 3%;
     width: 100%;
     height: 100%;
@@ -75,7 +74,12 @@
     height: 100%;
     transform: rotateY(-180deg);
 
+    h2{
+        color: $cfDev_primaryColor;
+        font-size: 2.2rem;
+        font-weight: 600;
 
+    }
 }
 
 
@@ -87,8 +91,8 @@
     aspect-ratio: 1;
     margin-top: 5%;
     svg{
-        fill:$cfDev_primaryColor;
-        stroke: $cfDev_primaryColor;
+        fill:$cfDev_textPrimaryColor;
+        stroke: $cfDev_textPrimaryColor;
         stroke-width: 1;
 
     }
