--- a/src/styles/views/_contact.scss
+++ b/src/styles/views/_contact.scss
@@ -2,24 +2,25 @@
 
 .contact-container {
  
-  padding-top: 15vh;
+  padding-top: 10vh;
   padding-bottom: 15vh;
   width: 100vw;
   background-color: $backgroun_color1;
   font-family: $cfDev_primaryFont;
   color: $cfDev_textTerciaryColor;
   h3 {
-    font-size: 2.8rem;
-    font-weight: 400;
+    font-size: 3rem;
+    font-weight: 600;
     font-family: $cfDev_primaryFont;
-    color: $cfDev_textTerciaryColor;
+    color: $backgroun_color5;
+    margin-left: 10%;
   }
   h4 {
     color: $cfDev_textTerciaryColor;
   }
 
   p {
-    color: "#E0E1E3";
+    color: $backgroun_color5;
   }
 }
 
@@ -84,7 +85,7 @@
 
   button {
     background-color: $cfDev_textPrimaryColor;
-    color: white;
+    color: $backgroun_color5;
     width: 100%;
     height: 10%;
     text-align: center;
@@ -109,12 +110,12 @@
   h4 {
     font-size: 3rem;
     font-weight: 600;
-    color: $cfDev_textTerciaryColor;
+    color: $cfDev_primaryColor;
   }
 
   p {
     font-size: 1.7rem;
-    color: $cfDev_textTerciaryColor;
+    color: $backgroun_color5;
   }
 
   .social-media-icons {
@@ -153,6 +154,8 @@
 
   .contact-container {
      h3{
+      margin: 0;
+      text-align: center;
     font-size: 3rem;
     text-align: center;
 }}
